--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Setup Mocha Report
+        run: npm install mocha-github-actions-reporter --no-save
+
       - name: Enable full coverage
         run: sed -i.bak 's/"\*"//g' package.json
         shell: bash
