--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "description": "Show a gutter icon when has a implement/override method/property in javascript or typescript.",
     "version": "1.2.1",
     "icon": "resources/override-mark.png",
-    "extensionKind": "ui",
+    "extensionKind": [
+        "ui"
+    ],
     "engines": {
-        "vscode": "^1.26.0"
+        "vscode": "^1.46.0"
     },
     "bugs": {
         "url": "https://github.com/edgardmessias/vscode.override-mark/issues"
@@ -212,7 +214,7 @@
         "@types/mocha": "^8.2.0",
         "@types/node": "~8.10.59",
         "@types/sinon": "^9.0.10",
-        "@types/vscode": "1.26.0",
+        "@types/vscode": "1.42.0",
         "@typescript-eslint/eslint-plugin": "^2.34.0",
         "@typescript-eslint/parser": "^2.34.0",
         "conventional-changelog-cli": "^2.1.1",
